@@ -34,10 +34,8 @@ import java.util.Map;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import org.apache.maven.RepositoryUtils;
 import org.apache.maven.api.services.TypeRegistry;
 import org.apache.maven.api.xml.XmlNode;
-import org.apache.maven.artifact.handler.manager.ArtifactHandlerManager;
 import org.apache.maven.eventspy.internal.EventSpyDispatcher;
 import org.apache.maven.execution.MavenExecutionRequest;
 import org.apache.maven.internal.xml.XmlNodeImpl;
@@ -61,7 +59,6 @@ import org.eclipse.aether.artifact.DefaultArtifact;
 import org.eclipse.aether.collection.VersionFilter;
 import org.eclipse.aether.repository.RepositoryPolicy;
 import org.eclipse.aether.resolution.ResolutionErrorPolicy;
-import org.eclipse.aether.util.graph.manager.ClassicDependencyManager;
 import org.eclipse.aether.util.graph.version.*;
 import org.eclipse.aether.util.listener.ChainedRepositoryListener;
 import org.eclipse.aether.util.repository.AuthenticationBuilder;
@@ -169,8 +166,6 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
-    private final ArtifactHandlerManager artifactHandlerManager;
-
     private final RepositorySystem repoSystem;
 
     private final SettingsDecrypter settingsDecrypter;
@@ -190,7 +185,6 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
     @SuppressWarnings("checkstyle:ParameterNumber")
     @Inject
     DefaultRepositorySystemSessionFactory(
-            ArtifactHandlerManager artifactHandlerManager,
             RepositorySystem repoSystem,
             SettingsDecrypter settingsDecrypter,
             EventSpyDispatcher eventSpyDispatcher,
@@ -199,7 +193,6 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
             VersionScheme versionScheme,
             Map<String, MavenExecutionRequestExtender> requestExtenders,
             Map<String, RepositorySystemSessionExtender> sessionExtenders) {
-        this.artifactHandlerManager = artifactHandlerManager;
         this.repoSystem = repoSystem;
         this.settingsDecrypter = settingsDecrypter;
         this.eventSpyDispatcher = eventSpyDispatcher;
@@ -224,8 +217,9 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
             requestExtender.extend(request);
         }
 
-        SessionBuilder sessionBuilder = new MavenSessionBuilderSupplier(repoSystem).get();
-        sessionBuilder.setArtifactTypeRegistry(new TypeRegistryAdapter(typeRegistry));
+        MavenSessionBuilderSupplier supplier = new MavenSessionBuilderSupplier(repoSystem);
+        SessionBuilder sessionBuilder = supplier.get();
+        sessionBuilder.setArtifactTypeRegistry(new TypeRegistryAdapter(typeRegistry)); // dynamic
         sessionBuilder.setCache(request.getRepositoryCache());
 
         // this map is read ONLY to get config from (profiles + env + system + user)
@@ -261,8 +255,6 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
         if (versionFilter != null) {
             sessionBuilder.setVersionFilter(versionFilter);
         }
-
-        sessionBuilder.setArtifactTypeRegistry(RepositoryUtils.newArtifactTypeRegistry(artifactHandlerManager));
 
         DefaultSettingsDecryptionRequest decrypt = new DefaultSettingsDecryptionRequest();
         decrypt.setProxies(request.getProxies());
@@ -433,10 +425,11 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
         }
         sessionBuilder.setRepositoryListener(repositoryListener);
 
+        // may be overridden
         String resolverDependencyManagerTransitivity =
                 mergedProps.getOrDefault(MAVEN_RESOLVER_DEPENDENCY_MANAGER_TRANSITIVITY_KEY, Boolean.TRUE.toString());
-        sessionBuilder.setDependencyManager(new ClassicDependencyManager(
-                Boolean.parseBoolean(resolverDependencyManagerTransitivity), SystemScopeHandler.LEGACY));
+        sessionBuilder.setDependencyManager(
+                supplier.getDependencyManager(Boolean.parseBoolean(resolverDependencyManagerTransitivity)));
 
         ArrayList<Path> paths = new ArrayList<>();
         paths.add(Paths.get(request.getLocalRepository().getBasedir()));
@@ -471,7 +464,7 @@ class DefaultRepositorySystemSessionFactory implements RepositorySystemSessionFa
         if (filterExpression != null) {
             List<String> expressions = Arrays.stream(filterExpression.split(";"))
                     .filter(s -> s != null && !s.trim().isEmpty())
-                    .collect(Collectors.toList());
+                    .toList();
             for (String expression : expressions) {
                 if ("h".equals(expression)) {
                     filters.add(new HighestVersionFilter());
